--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body 
         {
-            background-image: url("Background.png");
+            background-image: url("https://images.pling.com/img/00/00/63/03/06/1601822/14cefead174b612ca10f7bc836b2c47103ab413860560c44559bc816cee74d2a1a0f.jpg");
             height: 100%;
             width:100%;
 
@@ -105,6 +105,10 @@
                 algorithm design, game development and programming language design. In the past, I have developed databases, designed websites, built automation software, and 
                 conducted AI research for Intel over the course of several summer internships. My passion for computer science shows in the ambitious personal projects that I undertake.
                 This webpage is dedicated to showcasing my best coding projects as well as miscellaneous projects.
+                <br>
+                <br>
+                <br>
+                For inquiries, please contact me at&nbsp;&nbsp;<i>peterlooi11@gmail.com</i>
                 
     
             </span>
