--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Peter Looi</title>
     <style>
+
         body 
         {
             background-image: url("https://images.pling.com/img/00/00/63/03/06/1601822/14cefead174b612ca10f7bc836b2c47103ab413860560c44559bc816cee74d2a1a0f.jpg");
@@ -16,6 +17,25 @@
             background-attachment: fixed;
             padding:0px;
             margin:0px;
+        }
+        @media only screen and (max-width: 600px) {
+  
+
+            body 
+            {
+                background-color: grey;
+                height: 100%;
+                width:100%;
+
+                /* Center and scale the image nicely */
+                
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;
+                padding:0px;
+                margin:0px;
+            }
+
         }
 
         .ItemBox
