--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <span class="ItemLink" >
                 Download Game:
                 <br><br>
-                <a href="https://drive.google.com/file/d/1RXmqBbuVFns8rbnkCCqC8AeHYbyOlBW9/view?usp=sharing">CLICK TO DOWNLOAD</a>
+                <a href="https://drive.google.com/file/d/1RXmqBbuVFns8rbnkCCqC8AeHYbyOlBW9/view?usp=sharing">CLICK HERE TO DOWNLOAD</a>
                 
     
             </span>
