--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <br>
                 <br>
                 <br>
-                For inquiries, please contact me at&nbsp;&nbsp;<i>peterlooi11@gmail.com</i>
+                <!--For inquiries, please contact me at&nbsp;&nbsp;<i>peterlooi11@gmail.com</i>-->
                 
     
             </span>
