--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="ItemBody">
 
             <span class="ItemImage" >
-                <img src="Me.jpeg" width="320", height="427">
+                <img src="Me.png" width="320", height="427">
             </span>
             <span class="ItemLink" >
                 Hi! I'm Peter. I'm an experienced and passionate software developer with a Master's in Computer Science from University of Southern California. I am interested in artificial intelligence, 
