--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <span class="ItemLink" >
                 Download Game:
                 <br><br>
-                <a href="https://drive.google.com/file/d/16jBTRQ0WGuOqWw8Y-T4d109Yq-Zj1zIM/view?usp=sharing">CLICK HERE TO DOWNLOAD</a>
+                <a href="https://drive.google.com/file/d/1pYClc0eJtXRiglD_e3isQ2YCc_iwdlrj/view?usp=sharing">CLICK HERE TO DOWNLOAD!</a>
                 
     
             </span>
