--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <span class="ItemLink" >
                 Download Game:
                 <br><br>
-                <a href="https://drive.google.com/file/d/1pZG4Vehh0HcXKZOzfMNH1RF9U7IjRuP1/view?usp=sharing">CLICK HERE TO DOWNLOAD!</a>
+                <a href="https://drive.google.com/file/d/1ZPdjfv6eI49I_a5gGHvdrH-m47zsZmPa/view?usp=sharing">CLICK HERE TO DOWNLOAD</a>
                 
     
             </span>
